--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -4,7 +4,7 @@ jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
     steps:
-    - uses: pullreminders/label-when-approved-action
+    - uses: pullreminders/label-when-approved-action@master
       name: Label When Approved
       env: 
         APPROVALS: 1
